--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     </div>
                     <div class="input-box">
                         <label for="confirmpassword">Confrimar Senha</label>
-                        <input type="password" name="confirmpassword" id="confirmpassword" required placeholder="Digite sua senha novamente">
+                        <input type="password" name="confirmpassword" id="confirmpassword" required
+                            placeholder="Digite sua senha novamente">
                     </div>
                 </div>
                 <div class="form-radio">
@@ -71,7 +72,10 @@
                 </div>
             </form>
         </div>
-
+    </div>
+    <div class="port">
+        <a href="index.html">Form1</a>
+        <a href="Formulário_Pag_2/index2.html">Form2</a>
     </div>
 
 
